[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["stream", "blocking", "rustls-tls"] }
